--- a/src/components/Keyboard/ButtonCal/style.scss
+++ b/src/components/Keyboard/ButtonCal/style.scss
@@ -1,13 +1,33 @@
+.button_cal_container{
+}
 .button_cal{
-    height: 60px;
-    width: 60px;
-    background-color: cadetblue;
+    height: 50px;
+    width: 50px;
+    background-color: rgb(111, 111, 160);
     font-size: 2em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    line-height: 2em;
+    line-height: 1.5em;
     border-radius: 50%;
-    align-content: flex-start;
-    justify-content: flex-start;
-    align-items: flex-start;
+    border: double 3px transparent;
+    border-radius: 20px;
+    background-image: linear-gradient(rgb(96, 163, 152), rgb(68, 124, 114)), radial-gradient(circle at top left, rgb(120, 180, 170), rgb(40, 99, 88));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+
+    // align-content: flex-start;
+    // justify-content: flex-start;
+    // align-items: flex-start;
+    // margin: 10px;
+}
+.button_AC{
+    line-height: 2em;
+    background-color: crimson;
+    font-size:  1.5em;
+}
+.button_equal{
+    // margin-top: 15px;
+    border-radius: 20px;
+    height: 190px !important;
+    line-height: 6em;
 }
