--- a/src/components/Keyboard/ButtonCal/style.scss
+++ b/src/components/Keyboard/ButtonCal/style.scss
@@ -1,33 +1,56 @@
 .button_cal_container{
-}
-.button_cal{
     height: 50px;
     width: 50px;
+    border-radius: 23px;
+    background-color: aqua;
+    border:rgb(100, 99, 99) solid 3px;
+    border: double 3px transparent;
+    background-image: linear-gradient(rgb(7, 7, 7), rgb(17, 17, 17)), radial-gradient(circle at bottom right, rgb(59, 59, 59), rgb(151, 153, 153));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+.button_cal{
+    width: 45px;
+    height: 45px;
     background-color: rgb(111, 111, 160);
     font-size: 2em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     line-height: 1.5em;
-    border-radius: 50%;
     border: double 3px transparent;
     border-radius: 20px;
-    background-image: linear-gradient(rgb(96, 163, 152), rgb(68, 124, 114)), radial-gradient(circle at top left, rgb(120, 180, 170), rgb(40, 99, 88));
+    background-image: radial-gradient(circle at bottom right, rgb(96, 163, 152), rgb(68, 124, 114)), radial-gradient(circle at top left, rgb(120, 180, 170), rgb(40, 99, 88));
     background-origin: border-box;
     background-clip: content-box, border-box;
+    margin: auto;
 
     // align-content: flex-start;
     // justify-content: flex-start;
     // align-items: flex-start;
     // margin: 10px;
 }
+.button_cal_container.button_AC{
+
+}
 .button_AC{
     line-height: 2em;
-    background-color: crimson;
-    font-size:  1.5em;
+    background-image: none;
+    font-size:  1.2em;
+    background-image: radial-gradient(circle at bottom right,rgb(96, 163, 152), rgb(68, 124, 114)), radial-gradient(circle at top left, rgb(120, 180, 170), rgb(40, 99, 88));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
 }
-.button_equal{
+.button_cal_container.button_equal{
     // margin-top: 15px;
-    border-radius: 20px;
-    height: 190px !important;
+    border-radius: 23px;
+    height: 200px;
+}
+.button_cal.button_equal{
     line-height: 6em;
+    width: 45px;
+    height: 195px;
+    background-image: radial-gradient(circle at bottom right,rgb(96, 163, 152), rgb(68, 124, 114)), linear-gradient(90deg, rgb(120, 180, 170), rgb(40, 99, 88));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    // margin: auto;
 }
