--- a/src/components/Keyboard/style.scss
+++ b/src/components/Keyboard/style.scss
@@ -41,3 +41,10 @@
 .block_container{
     margin-top: 5px;
 }
+.multiplication{
+    line-height: 1.4em;
+    font-size: 1.3em;
+}
+.minus{
+    line-height: 1.2em;
+}
