--- a/src/components/Keyboard/ButtonCal/style.scss
+++ b/src/components/Keyboard/ButtonCal/style.scss
@@ -10,6 +10,8 @@
     background-clip: content-box, border-box;
 }
 .button_cal{
+    cursor: pointer;
+    user-select: none;
     width: 45px;
     height: 45px;
     background-color: rgb(111, 111, 160);
@@ -23,11 +25,12 @@
     background-origin: border-box;
     background-clip: content-box, border-box;
     margin: auto;
-
-    // align-content: flex-start;
-    // justify-content: flex-start;
-    // align-items: flex-start;
-    // margin: 10px;
+}
+.button_cal:hover{
+    transform: scale(1.08);
+}
+.button_cal:active{
+    transform: scale(0.99);
 }
 .button_cal_container.button_AC{
 
@@ -41,7 +44,6 @@
     background-clip: content-box, border-box;
 }
 .button_cal_container.button_equal{
-    // margin-top: 15px;
     border-radius: 23px;
     height: 200px;
 }
@@ -53,4 +55,11 @@
     background-origin: border-box;
     background-clip: content-box, border-box;
     // margin: auto;
+}
+.button_cal.button_equal:hover{
+    transform: scaleX(1.04) scaleY(1.01);
+}
+.button_cal.button_equal:active{
+    // transition: transform 1.0s;
+    transform: scaleX(0.99) scaleY(0.999);
 }
